<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/row_item_iv"
        android:layout_width="match_parent"
        android:layout_height="242dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/iv_row_item_description"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="242dp"
        android:contentDescription="@string/scrim_item"
        android:background="@drawable/scrim_item"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@android:color/white"
        android:maxLines="2"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/product_sans_bold"
        android:id="@+id/tv_main_screen_movie_name"
        android:textSize="30sp"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/rating_image"
        android:src="@drawable/ic_star"
        android:layout_margin="16dp"
        android:layout_gravity="end|bottom"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@android:color/white"
        android:maxLines="2"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="49dp"
        android:textStyle="bold"
        android:fontFamily="@font/product_sans_bold"
        android:id="@+id/tv_main_screen_star_rating"
        android:textSize="20sp"/>

</FrameLayout>