<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:id="@+id/frame_layout"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:alpha="0.4"
        android:transitionName="imageTransitionName"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background_image"
        android:id="@+id/iv_background"/>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <View
                android:layout_height="2dp"
                android:layout_marginTop="32dp"
                android:layout_width="250dp"
                android:layout_gravity="center"
                android:background="@android:color/white"/>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="250dp"
                android:contentDescription="@string/main_image"
                android:layout_gravity="center"
                android:id="@+id/iv_detail_main_image"
                android:layout_margin="16dp"/>

            <View
                android:layout_width="250dp"
                android:layout_gravity="center"
                android:layout_height="2dp"
                android:background="@android:color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:textSize="50sp"
                android:layout_marginStart="30sp"
                android:layout_marginEnd="30sp"
                android:transitionName="movieNameTransitionName"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:id="@+id/tv_movie_title_detail"
                android:layout_height="wrap_content"
                android:fontFamily="@font/product_sans_bold"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:contentDescription="@string/released_on_image"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_clock"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:textColor="@android:color/white"
                    android:id="@+id/tv_date_released_detail"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/rating_image"
                    android:src="@drawable/ic_star"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:textColor="@android:color/white"
                    android:id="@+id/tv_rating_detail"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:text="@string/overview"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:id="@+id/tv_overview_detail"
                android:layout_marginStart="30dp"
                android:hint="@string/overview"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:text="@string/trailers"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">

                <android.support.v4.view.ViewPager
                    android:layout_height="200dp"
                    android:padding="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_width="match_parent"
                    android:clipToPadding="false"
                    android:id="@+id/view_pager"/>

                <ProgressBar
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="30dp"
                    android:id="@+id/pb_trailers"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/white"
                    android:layout_marginStart="30dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_no_trailers_available"
                    android:text="@string/no_trailers_available"/>

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:text="@string/reviews"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="70dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/rv_reviews"/>

                <ProgressBar
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/pb_reviews"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:id="@+id/tv_no_reviews_available"
                    android:text="@string/no_reviews_available"/>

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fab_share_detail"
        android:layout_marginBottom="30dp"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="30dp"
        android:src="@drawable/ic_share"/>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:id="@+id/fab_fav_detail"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/ic_unfav"/>

</FrameLayout>